feat: fully switch to config